<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools             ="http://schemas.android.com/tools"
    android:id              ="@+id/main"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent"
    android:gravity         ="center_vertical"
    android:orientation     ="vertical"
    android:padding         ="16dp"
    tools:context           =".MainActivity">

    <TextView
        android:id                  ="@+id/tvAppName"
        android:layout_width        ="match_parent"
        android:layout_height       ="wrap_content"
        android:gravity             ="center_horizontal"
        android:text                ="@string/app_name"
        android:textSize            ="24sp"
        android:textStyle           ="bold"
        android:layout_marginBottom ="16dp" />

    <Button
        android:id              ="@+id/btnGallery"
        android:layout_width    ="match_parent"
        android:layout_height   ="wrap_content"
        android:text            ="@string/image_gallery" />

    <Button
        android:id              ="@+id/btnWebView"
        android:layout_width    ="match_parent"
        android:layout_height   ="wrap_content"
        android:layout_marginTop="12dp"
        android:text            ="@string/web_content" />

    <Button
        android:id              ="@+id/btnBluetooth"
        android:layout_width    ="match_parent"
        android:layout_height   ="wrap_content"
        android:layout_marginTop="12dp"
        android:text            ="@string/bluetooth" />

    <Button
        android:id              ="@+id/btnLegacyNetwork"
        android:layout_width    ="match_parent"
        android:layout_height   ="wrap_content"
        android:layout_marginTop="12dp"
        android:text            ="@string/legacy_network" />

</LinearLayout>